--- a/index.html
+++ b/index.html
@@ -78,32 +78,33 @@
     </script>
 
     <script>
+
+    
 // showmessage gibi
-        alert("Bu bir mesajdır...");
+            alert("Bu bir mesajdır...");
 
     </script>
 
     <script>
-// Javascript tarafından ekrandaki HTML elemanlarına erişim yapılabilir (innerHTML)
+        // Javascript tarafından ekrandaki HTML elemanlarına erişim yapılabilir (innerHTML)
         var icerik;
 
-        document.write("<br/><br/>");
+        document.write("<br /><br />");
         icerik = document.getElementById("lorem").innerHTML;
 
         document.write(icerik);
-
-
-
 
     </script>
 
     <script>
         var content;
-        content = "Deneme..Deneme"; 
+
+        content = "Deneme....Deneme";
+
+        // soru : yukarda gözüken p tagının içeriğni değişgenimin değeriyle değiştirme nasıl olur..
+
         document.getElementById("lorem").innerHTML = content;
-
     </script>
-
 
 
 </body>
