--- a/FormElement.html
+++ b/FormElement.html
@@ -1,12 +1,20 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Form elements</title>
+
+    <script src="scripts/formelements.js"></script>
+
 </head>
 <body>
-    <input id="tbox1" type="text" />
-    <input id="tbox2" type="text" />
+    <!-- tbox1 in içeriğini yazma butona basınca -->
+    <input id="tbox1" type="text" /><br />
+    <input id="Button1" type="button" value="İçeriği yaz" onclick="tboxWrite()" />&nbsp;&nbsp;<br /><b id="sonuc1"></b>  <br /><br />
+    <!-- tbox2 nin içeriğini artırma butona basınca -->
+    <input id="tbox2" type="text" /><br />
+    <input id="Button2" type="button" value="Artır..." onclick="artir()" />
+    <input id="Button3" type="button" value="Azalt..." onclick="azalt()" />
 
 </body>
 </html>
